<resources>
    <string name="app_name">KloBuddy</string>
    <string name="action_menu_favorites">Favorites</string>
    <string name="action_menu_map">Map</string>
    <string name="action_menu_settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_location_permission_denied">You denied the location permission</string>
    <string name="favorites_view_button_start_navigation">Start navigation</string>
    <string name="rating">Rating</string>
    <string name="name">Name</string>
    <string name="your_favorites">Your Favorites:</string>
    <string name="star">Star</string>
    <string name="bottom_sheet_description">WC DESCRIPTION</string>
    <string name="placeholder">PLACEHOLDER</string>

    <!-- Bottom sheet -->
    <string name="has_changing_table">Changing table available</string>
    <string name="wheelchair_accessible">Wheelchair accessible</string>
    <string name="has_urinal">Urinal available</string>
    <string name="no_fee">Free to use</string>

    <!-- Preferences -->
    <string name="preferences_general_category_title">General</string>
    <string name="preferences_theme_title">Theme</string>
    <string name="preferences_theme_summary">Choose your preferred theme</string>
    <string-array name="preferences_themeOptions">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>
    <string-array name="preferences_themeValues">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>
    <string name="preferences_zoom_level_title">Zoom level</string>
    <string name="preferences_zoom_level_summary">Choose your preferred default zoom level</string>
    <string name="location_permission_title">Location Permission Required</string>
    <string name="location_permission_message">This app requires location permission to function properly. Please grant the permission.</string>
    <string name="out_of_bounds_title">Location is out of bounds</string>
    <string name="out_of_bounds_message">You are currently out of the supported area. To use all features, please move to Berlin.</string>
    <string name="default_web_client_id" translatable="false">884287377088-eu8rkleckloao9533qnosphhor8fbsrv.apps.googleusercontent.com</string>
    <string name="error_authentification_failed">Authentication failed. Please try again</string>
    <string name="preferences_user_preferences_category_title">User Settings</string>
    <string name="preferences_sign_out_title">Sign Out</string>
    <string name="preferences_sign_out_summary">Sign out with your google account from this app</string>
    <string name="sign_out_dialog_title">Are you sure?</string>
    <string name="sign_out_dialog_message">Are you sure you want to sign out?</string>
    <string name="dialog_option_yes">yes</string>
    <string name="dialog_option_no">No</string>
    <string name="theme_change_dialog_title">Theme changed</string>
    <string name="theme_change_dialog_message">Please restart the app for the changes to take effect.</string>
    <string name="dialog_option_restart">Restart</string>
    <string name="dialog_option_later">Later</string>
    <string name="sign_in_with_google">Click here to sign in or register</string>
    <string name="sign_in_to_continue">Please sign in with your Google Account to use KloBuddy</string>
    <string-array name="preferences_zoom_level_entries">
        <item>Near</item>
        <item>Normal</item>
        <item>Far</item>
    </string-array>
    <string-array name="preferences_zoom_level_values">
        <item>17</item>
        <item>16</item>
        <item>15</item>
    </string-array>
</resources>