<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".activities.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_in_to_continue"
        android:textSize="25sp"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/sign_in_with_google"
        android:textSize="20sp"


        />


</LinearLayout>